# sigevent

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  build.sh  poetry.lock.bakdsf  pyproject.toml
.github/actions/install-poetry/: action.yml
.github/workflows/: cd.yml  ci.yml
podaac/sigevent/: daily_report_gen.py  event_handler.py  message.py  utilities.py
podaac/sigevent/resources/: notification.html  summary.html
terraform/: .terraform.lock.hcl  cloudwatch.tf  database.tf  lambdas.tf  main.tf  messaging.tf  variables.tf
terraform/environments/: .gitignore  ops.env  sandbox.env  sit.env  uat.env
tests/: test_daily_report_gen.py  test_event_handler.py
